# ChangeLog for app-antivirus/clamav
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.140 2006/04/07 18:04:05 halcy0n Exp $

  07 Apr 2006; Mark Loeser <halcy0n@gentoo.org> clamav-0.88.1.ebuild:
  Stable on x86; bug #128963

  07 Apr 2006; Rene Nussbaumer <killerfox@gentoo.org> clamav-0.88.1.ebuild:
  Stable on hppa. See bug #128963.

  07 Apr 2006; Simon Stelling <blubb@gentoo.org> clamav-0.88.1.ebuild:
  stable on amd64 wrt bug 128963

  07 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.88.1.ebuild:
  Stable on sparc wrt security #128963

  06 Apr 2006; Fernando J. Pereda <ferdy@gentoo.org> clamav-0.88.1.ebuild:
  Stable on alpha wrt security bug #128963

  06 Apr 2006; Markus Rothe <corsair@gentoo.org> clamav-0.88.1.ebuild:
  Stable on ppc64

  06 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  clamav-0.88.1.ebuild:
  ppc stable, bug #128963

*clamav-0.88.1 (06 Apr 2006)

  06 Apr 2006; Patrick McLean <chutzpah@gentoo.org> +clamav-0.88.1.ebuild:
  Version bump, fixes some security bugs (bug 128963)

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> clamav-0.88.ebuild:
  Mark 0.88 stable on ia64

  22 Jan 2006; Andrej Kacian <ticho@gentoo.org> clamav-0.87.ebuild,
  clamav-0.87.1.ebuild, clamav-0.88.ebuild:
  Removed libidn dependency. Bug #119909.

  12 Jan 2006; Markus Rothe <corsair@gentoo.org> clamav-0.88.ebuild:
  Stable on ppc64; bug #118459

  12 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org> clamav-0.88.ebuild:
  Stable on hppa. See bug #118459.

  12 Jan 2006; Simon Stelling <blubb@gentoo.org> clamav-0.88.ebuild:
  stable on amd64 wrt bug 118459

  11 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.88.ebuild:
  ppc stable, bug #118459

  10 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> clamav-0.88.ebuild:
  Stable on sparc wrt #118459

  10 Jan 2006; Andrej Kacian <ticho@gentoo.org> clamav-0.88.ebuild: