@@ -1,49 +1,70 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 1a64e48f182060c33ad5c46281c82e7c ChangeLog 23265
-RMD160 08f4cbb05a3f5c7ae417661977323f5862d2f7ef ChangeLog 23265
-SHA256 1bb4d92b6231a99ccd02735af79559c6630eff1197a515fb063fafd0979357a9 ChangeLog 23265
-MD5 b14cefc87a5f36a46cf660ecbbaf3242 clamav-0.87.1.ebuild 3669
-RMD160 4a04f78e77334e16aa12f6e89469899accd9aeb7 clamav-0.87.1.ebuild 3669
-SHA256 051c943e07bc71a320b2b5268cbc88cfeee8a4e154469c2eeda6df5be28c0e94 clamav-0.87.1.ebuild 3669
-MD5 59ac4fa6c697bff900339d61cf7ed7ab clamav-0.87.ebuild 3666
-RMD160 34443d3d53ed2522fc1fa7531950e0759a96f39a clamav-0.87.ebuild 3666
-SHA256 334bf0dbd467cab327634413212c8c2e0ba82c14678a133e4c3c51eb5a64884e clamav-0.87.ebuild 3666
-MD5 31126bed41ed54bf3967f244fdc11a63 clamav-0.88.1.ebuild 3405
-RMD160 649f47fa5c35492c65eb0494bc89358b45c0d036 clamav-0.88.1.ebuild 3405
-SHA256 18bc2427c3b39e4dcf4968697e4e71b4f4bcf3d077e28ac42388fb44b3976876 clamav-0.88.1.ebuild 3405
-MD5 837eadebdf75365ee482b4ff01467861 clamav-0.88.ebuild 3404
-RMD160 04dbdb98a7cc250a28e8901efb94c42b7343bb43 clamav-0.88.ebuild 3404
-SHA256 4b8343abf66aa275ec412802684bbe787fd34b4bac7d557033d76d18ccea26fa clamav-0.88.ebuild 3404
+AUX clamav-milter.README.gentoo 1124 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b SHA1 0b9b86a0e7732eaaf7f880859265754f7a4efd3a SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11 size 1124
 MD5 08f7b320461c04bbb88555e389c2e544 files/clamav-milter.README.gentoo 1124
 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b files/clamav-milter.README.gentoo 1124
 SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11 files/clamav-milter.README.gentoo 1124
+AUX clamd.conf 193 RMD160 abebb5e1607e6819859b51e1a41b583c8266c6df SHA1 5b27737aecf3bd90277988fc60526ede7d4be636 SHA256 cd867dc66af694282584fa2cfd40a662ac2a7c25d6f2288b9afdc657a07226e3 size 193
 MD5 e29ee77ca9bfe28ed18dbf67a9c90e75 files/clamd.conf 193
 RMD160 abebb5e1607e6819859b51e1a41b583c8266c6df files/clamd.conf 193
 SHA256 cd867dc66af694282584fa2cfd40a662ac2a7c25d6f2288b9afdc657a07226e3 files/clamd.conf 193
+AUX clamd.rc 2033 RMD160 aed0e44ce893dad9da77fba3f1ee56001e99adcb SHA1 d2dc3c366cc373d13f7336940b61597fa66f2cef SHA256 6ccae0a0f3f7be2946ed0975ea5093dac605889c44952bd4e02f20e91e606bce size 2033
 MD5 1906bcd8209370d0a03fb066161f6d59 files/clamd.rc 2033
 RMD160 aed0e44ce893dad9da77fba3f1ee56001e99adcb files/clamd.rc 2033
 SHA256 6ccae0a0f3f7be2946ed0975ea5093dac605889c44952bd4e02f20e91e606bce files/clamd.rc 2033
+DIST clamav-0.87.1.tar.gz 4468992 size 4468992
+DIST clamav-0.87.tar.gz 4273714 size 4273714
+DIST clamav-0.88.1.tar.gz 5348769 RMD160 020022cc6da2f29eb1a2733e614b6feab8771397 SHA256 25f678d1268fa91913dd2f0b7e08338faf65a4f48618ce59d773e3c42e606cff size 5348769
+DIST clamav-0.88.2.tar.gz 6016832 RMD160 db6960b315d7c0aec289e3820363f0a6f9c41daf SHA256 b50874f10b09ce45d6753b641836b472dd60b9e73d789fe4ec89b34f7c3d33ba size 6016832
+DIST clamav-0.88.tar.gz 4564473 RMD160 9ca758b665fcf51e42316a88198ea5c13dc3c407 SHA256 7912be29d13dae676691fbad7fa5fc1518eb3b8b45f8d147097908533ca1f8db size 4564473
+EBUILD clamav-0.87.1.ebuild 3669 RMD160 4a04f78e77334e16aa12f6e89469899accd9aeb7 SHA1 5feb97ec040287297227353397484e54e30300db SHA256 051c943e07bc71a320b2b5268cbc88cfeee8a4e154469c2eeda6df5be28c0e94 size 3669
+MD5 b14cefc87a5f36a46cf660ecbbaf3242 clamav-0.87.1.ebuild 3669
+RMD160 4a04f78e77334e16aa12f6e89469899accd9aeb7 clamav-0.87.1.ebuild 3669
+SHA256 051c943e07bc71a320b2b5268cbc88cfeee8a4e154469c2eeda6df5be28c0e94 clamav-0.87.1.ebuild 3669
+EBUILD clamav-0.87.ebuild 3666 RMD160 34443d3d53ed2522fc1fa7531950e0759a96f39a SHA1 8dc7a02f016a72361bb2d5af751ffa0d43ecba96 SHA256 334bf0dbd467cab327634413212c8c2e0ba82c14678a133e4c3c51eb5a64884e size 3666
+MD5 59ac4fa6c697bff900339d61cf7ed7ab clamav-0.87.ebuild 3666
+RMD160 34443d3d53ed2522fc1fa7531950e0759a96f39a clamav-0.87.ebuild 3666
+SHA256 334bf0dbd467cab327634413212c8c2e0ba82c14678a133e4c3c51eb5a64884e clamav-0.87.ebuild 3666
+EBUILD clamav-0.88.1.ebuild 3405 RMD160 649f47fa5c35492c65eb0494bc89358b45c0d036 SHA1 860566ee1cb7e255d899bc6c5d1763364f0b8ead SHA256 18bc2427c3b39e4dcf4968697e4e71b4f4bcf3d077e28ac42388fb44b3976876 size 3405
+MD5 31126bed41ed54bf3967f244fdc11a63 clamav-0.88.1.ebuild 3405
+RMD160 649f47fa5c35492c65eb0494bc89358b45c0d036 clamav-0.88.1.ebuild 3405
+SHA256 18bc2427c3b39e4dcf4968697e4e71b4f4bcf3d077e28ac42388fb44b3976876 clamav-0.88.1.ebuild 3405
+EBUILD clamav-0.88.2.ebuild 3410 RMD160 edd01f9ea525f6bf047cdd78d3be76dadb7b2b7e SHA1 e8631b69d771129208b0af30c70ff5094ee5a4b8 SHA256 4f76443ad3c435bcddbd7b61456858838038ee80aac3a250c5e5fcaf436ca881 size 3410
+MD5 e0d923ecafb8d177e4b38c96c1f707c0 clamav-0.88.2.ebuild 3410
+RMD160 edd01f9ea525f6bf047cdd78d3be76dadb7b2b7e clamav-0.88.2.ebuild 3410
+SHA256 4f76443ad3c435bcddbd7b61456858838038ee80aac3a250c5e5fcaf436ca881 clamav-0.88.2.ebuild 3410
+EBUILD clamav-0.88.ebuild 3404 RMD160 04dbdb98a7cc250a28e8901efb94c42b7343bb43 SHA1 69387e38027f924e8333a09df11a31c1f480047b SHA256 4b8343abf66aa275ec412802684bbe787fd34b4bac7d557033d76d18ccea26fa size 3404
+MD5 837eadebdf75365ee482b4ff01467861 clamav-0.88.ebuild 3404
+RMD160 04dbdb98a7cc250a28e8901efb94c42b7343bb43 clamav-0.88.ebuild 3404
+SHA256 4b8343abf66aa275ec412802684bbe787fd34b4bac7d557033d76d18ccea26fa clamav-0.88.ebuild 3404
+MISC ChangeLog 23442 RMD160 67688044b0b4aef719f6ccd467dd397ab05939ba SHA1 2e9d4220c3157ec1b4496101940f26a842bbe883 SHA256 5d8934183f4c7a12faea5a078196019236a555b76c49bbdfec7817da8fb85078 size 23442
+MD5 a35afee8227a1b438897509c99886cda ChangeLog 23442
+RMD160 67688044b0b4aef719f6ccd467dd397ab05939ba ChangeLog 23442
+SHA256 5d8934183f4c7a12faea5a078196019236a555b76c49bbdfec7817da8fb85078 ChangeLog 23442
+MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58 size 184
+MD5 7e32edfd72887a57b16ecd73f0f7a1a0 metadata.xml 184
+RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 metadata.xml 184
+SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58 metadata.xml 184
 MD5 17e487f0452933ea8ab559a404329cf2 files/digest-clamav-0.87 64
 RMD160 47ca9a9e10651845312f3408d9fe87f09a5ddbe6 files/digest-clamav-0.87 64
 SHA256 e4915371a7277786e0d98c74f9880378ebce382bdfd326c45544cce1afa1187d files/digest-clamav-0.87 64
 MD5 25387621d9eaf247726bf74459264749 files/digest-clamav-0.87.1 66
 RMD160 6b63bfc32118f3915c54e2cb89719f7a2eaab353 files/digest-clamav-0.87.1 66
 SHA256 3c10ea02f2dea1871ab5e34ebb328f8155357e3185f4325e8cff9ad67b639fb8 files/digest-clamav-0.87.1 66
-MD5 262cbb9bc1b14af67f7a546d65aed16d files/digest-clamav-0.88 64
-RMD160 da20839089ac0bd532eb89ac6190096c1beda3de files/digest-clamav-0.88 64
-SHA256 adaf99fc4e1ce7af4b5b7aa4c66493266695e17104f2c330b29b81e6e5a5606e files/digest-clamav-0.88 64
+MD5 d8a490c75ca6310336ae2439dff65dbc files/digest-clamav-0.88 238
+RMD160 5663805936da83b4635e27c8fdd069e18c68cdee files/digest-clamav-0.88 238
+SHA256 29367f45996e13b75b2e72911039fa5ea59600c8788fd1c883236b88738cff92 files/digest-clamav-0.88 238
 MD5 7725495555aa9fad34935d82333093cb files/digest-clamav-0.88.1 244
 RMD160 11231de9dbc479ae2b70d4ea222cf16494f495a7 files/digest-clamav-0.88.1 244
 SHA256 d2f619733a8579fe006f226f671ad87875e884bb36c294cb09966fdd13988321 files/digest-clamav-0.88.1 244
-MD5 7e32edfd72887a57b16ecd73f0f7a1a0 metadata.xml 184
-RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 metadata.xml 184
-SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58 metadata.xml 184
+MD5 6557161b98cbfbcec57b399cb594a7f4 files/digest-clamav-0.88.2 244
+RMD160 4ee5ca92b95daa1bba9ada8893b5c9e7fd0f3bce files/digest-clamav-0.88.2 244
+SHA256 4d596a1a1fa69d8a5fc8b31c63274bb4ce9184fa30c4981a005702f539715c9c files/digest-clamav-0.88.2 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFENqmkCRZPokWLroQRAhJcAKChoopeRW7MzthaqC08kzKiyTSurgCgwhqX
-hWe01Il8HAc8uP3gz0W84tA=
-=Sixk
+iD8DBQFEVKM6QlM6RnzZP+IRAjjAAJ97brsOvW+9SIjhQIGgS07n1Qk5ZwCZARaW
+U8psMxvQUkYrD8f7w/CYKbg=
+=yWdV
 -----END PGP SIGNATURE-----
