@@ -1,1 +1,3 @@
 MD5 5d23205673c32e2b1b6db95000e6da74 clamav-0.88.tar.gz 4564473
+RMD160 9ca758b665fcf51e42316a88198ea5c13dc3c407 clamav-0.88.tar.gz 4564473
+SHA256 7912be29d13dae676691fbad7fa5fc1518eb3b8b45f8d147097908533ca1f8db clamav-0.88.tar.gz 4564473
