@@ -1,0 +1,3 @@
+MD5 f0a1c610a1fb70bd748a08bea69c736c clamav-0.88.2.tar.gz 6016832
+RMD160 db6960b315d7c0aec289e3820363f0a6f9c41daf clamav-0.88.2.tar.gz 6016832
+SHA256 b50874f10b09ce45d6753b641836b472dd60b9e73d789fe4ec89b34f7c3d33ba clamav-0.88.2.tar.gz 6016832
